--- a/index.html
+++ b/index.html
@@ -109,7 +109,7 @@
 
     <footer class="background">
         <p class="text-footer">
-            Copyright &copy; 2027 - www.iEducate.com - All rights reserved
+            Copyright &copy; 2022 - www.Educ@te.com - All rights reserved
         </p>
     </footer>
     <script src="js/resp.js"></script>
